--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    selection = []\n",
-    "    "
+    "    for restaurant in restaurants:\n",
+    "        if "
    ]
   },
   {
