--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
     "def open_restaurants(restaurants):\n",
     "    selection = []\n",
     "    for restaurant in restaurants:\n",
-    "        if "
+    "        if \n",
+    "            selected"
    ]
   },
   {
