--- a/index.ipynb
+++ b/index.ipynb
@@ -287,10 +287,10 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    selection = []\n",
+    "    selected = []\n",
     "    for restaurant in restaurants:\n",
     "        if \n",
-    "            selected"
+    "            selected.append"
    ]
   },
   {
