Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "    selected = []\n",
     "    for restaurant in restaurants:\n",
     "        if \n",
-    "            selected.append"
+    "            selected.append(restaurant)"
    ]
   },
   {
