Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
     "def open_restaurants(restaurants):\n",
     "    selected = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['s ']\n",
+    "        if restaurant['is closed']=\n",
     "            selected.append(restaurant)"
    ]
   },
