--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,8 @@
     "    selected = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is closed']= False:\n",
-    "            selected.append(restaurant)"
+    "            selected.append(restaurant)\n",
+    "            "
    ]
   },
   {
