Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is closed']= False:\n",
     "            selected.append(restaurant)\n",
-    "            "
+    "    return selected"
    ]
   },
   {
