--- a/index.ipynb
+++ b/index.ipynb
@@ -282,15 +282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-da93ab6bb938>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-15-ed0e084222fa>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-da93ab6bb938>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if restaurant['is closed'] = False:\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-ed0e084222fa>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if restaurant['is closed'] = True:\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -298,7 +298,7 @@
     "def open_restaurants(restaurants):\n",
     "    selected = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is closed'] = False:\n",
+    "        if restaurant['is closed'] = True:\n",
     "            selected.append(restaurant)\n",
     "    return selected"
    ]
