Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
     "def open_restaurants(restaurants):\n",
     "    selected = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is closed'] = True:\n",
+    "        if restaurant['is closed'] is Fals:\n",
     "            selected.append(restaurant)\n",
     "    return selected"
    ]
