Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -282,23 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-ed0e084222fa>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-ed0e084222fa>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if restaurant['is closed'] = True:\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    selected = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is closed'] is Fals:\n",
+    "        if restaurant['is closed'] is False:\n",
     "            selected.append(restaurant)\n",
     "    return selected"
    ]
